--- a/WebTo/WebTo/Views/Home/Index.cshtml
+++ b/WebTo/WebTo/Views/Home/Index.cshtml
@@ -5,13 +5,13 @@
 @model MdlAccount
 
 
-<div class="container">
+<div class="container-fluid">
     <div id="tag1" class="block-cont">
     <div class="row">
         <div class="col-sm-12 text-center">
             <div style="display:inline-grid">
-                    <div class="maincentersub2">   <h2 class="display-4">Web Admin</h2></div>
-                <div style="display:block;width:350px;">
+                    <div class="maincentersub2">   <h2 class="display-4">.</h2></div>
+                <div  style="display:block;">
                   
                    
                        @*  @using (Html.BeginForm()) *@
