--- a/WebTo/WebTo/Views/Shared/_Layout.cshtml
+++ b/WebTo/WebTo/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-color border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Administrator</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">.</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -30,11 +30,11 @@
             </div>
         </nav>
     </header>
-
+@* 
     <div class="container-fluid">
         <div class="banner">
         </div>
-    </div>
+    </div> *@
     <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
