--- a/WebTo/WebTo/Views/Home/Monitor.cshtml
+++ b/WebTo/WebTo/Views/Home/Monitor.cshtml
@@ -26,7 +26,7 @@
 </div>
 <script>
 
-   //var myvar = setInterval(mytime,4000)
+   var myvar = setInterval(mytime,4000)
 
     function mytime(){
     
@@ -46,7 +46,7 @@
                                      <div class="blockshow-item">
 
                                         <h5>`+ data.sender + `</h5>
-
+                                                                <h6>`+ data.createdTime + `</h6>
                         </div>
                         <div class="blockshow-item">
                                         <h4>`+ data.msg + `</h4>
